--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 mkdocs 
 mkdocstrings 
-mkdocstrings[python] 
+mkdocstrings[python]
+mkdocs-multirepo-plugin 
 mkdocs-exporter 
 mkdocs-material
 mkdocs-encryptcontent-plugin
